--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/page.jsx", "src/app/components/About.jsx", "src/app/components/Portfolio.jsx", "src/app/components/Nav.jsx", "src/app/components/Header.jsx", "src/app/components/Project.jsx", "src/app/components/Modal.jsx", "src/app/components/Footer.jsx", "src/app/components/Contact.jsx"],
   "exclude": ["node_modules"]
 }
